fix: preserve todo content's white spaces in todo-detail

--- a/src/features/todo-detail/style.css
+++ b/src/features/todo-detail/style.css
@@ -18,6 +18,10 @@
   font-weight: 700;
 }
 
+.todo-content {
+  white-space: pre;
+}
+
 .empty-todo-detail {
   display: flex;
   justify-content: center;
